--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,28 +14,23 @@ services:
     restart: always
     ports:
       - 5432:5432
-    environment:
-      POSTGRES_PASSWORD: 0000 
-      #POSTGRES_DB:  
-     # POSTGRES_USER: 
+    env_file:
+      - .env
     networks:
       - net-db
 
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: pma
-    links:
-      - postgres
-    #environment:
-     # PMA_HOST: postgres
-      #PMA_PORT: 3306
-      #PMA_ARBITRARY: 1
-    restart: always
-    networks:
-      - net-db
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    env_file:
+      - .env
     ports:
-      - 8080:80
+      - "5050:80"
+    networks:
+      - net-db
+    container_name: pgadmin
+    depends_on:
+      - postgres
+    restart: always
 
   backend:
     container_name: nestjs-app
@@ -55,18 +50,18 @@ services:
       - /usr/src/app/node_modules
     restart: unless-stopped
 
-  frontend:
-    container_name: frontend
-    build:
-      context: ./Front
-      dockerfile: Dockerfile
-    ports:
-      - "3001:3001"
-    volumes:
-      - ./Front:/usr/src/app
-      - /usr/src/app/node_modules
-    networks:
-       - net-app
-    restart: unless-stopped
-    depends_on:
-      - backend
+  # frontend:
+  #   container_name: frontend
+  #   build:
+  #     context: ./Front
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3001:3001"
+  #   volumes:
+  #     - ./Front:/usr/src/app
+  #     - /usr/src/app/node_modules
+  #   networks:
+  #      - net-app
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - backend
