toujours pb router react

--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -6,8 +6,10 @@ WORKDIR /app
 COPY package*.json ./
 
 RUN npm install
+RUN npm install react-router-dom
 
 COPY public ./public
 COPY src ./src
 COPY . ./
+
 CMD ["npm", "start"]
