--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,5 +63,7 @@ services:
     networks:
        - net-app
     restart: unless-stopped
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     # depends_on:
     #   - backend
