--- a/tests_www/Dockerfile
+++ b/tests_www/Dockerfile
@@ -7,6 +7,7 @@ COPY package*.json ./
 
 RUN npm install
 RUN npm install react-router-dom
+RUN npm install awesome-typescript-loader source-map-loader
 
 COPY public ./public
 COPY src ./src
