--- a/Front/package.json
+++ b/Front/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "chicken",
+  "name": "MAMANNNN",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +13,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "animate.css": "^4.1.1",
     "create-react-app": "^1.2.1",
     "framer-motion": "^10.11.5",
     "react": "^18.2.0",
