backend add to the branch

--- a/Back/Dockerfile
+++ b/Back/Dockerfile
@@ -15,10 +15,21 @@ RUN npm install
 
 RUN npm install --save @nestjs/passport passport passport-local && npm install --save-dev @types/passport-local
 
+RUN npm install passport-google-oauth20 --save
+RUN npm install otplib --save
+RUN npm install @nestjs/jwt passport-jwt --save
+RUN npm install @nestjs/config --save
+RUN npm install @nestjs/common --save
+RUN npm install qrcode --save
+RUN npm install prisma --save-dev
+RUN npm install express --save
+RUN npm install @nestjs/common --save
+RUN npm install @prisma/client --save
+
 # Copiez tous les autres fichiers
 COPY ./src ./
 
-# Exposez le port 3000
+# Exposez le port 300
 EXPOSE 3000
 
 # Démarrez l'application
