--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,41 +14,34 @@ services:
     restart: always
     ports:
       - 5432:5432
+    volumes:
+      - db-data:/var/lib/postgresql/data
     env_file:
       - .env
     networks:
       - net-db
 
-  pgadmin:
-    image: dpage/pgadmin4:latest
+  backend:
+    container_name: nestjs-app
+    image: nestjs-app
+    build:
+      context: ./Back
+      dockerfile: Dockerfile
     env_file:
       - .env
     ports:
-      - "5050:80"
+      - 3001:3001
+      - 5555:5555
     networks:
       - net-db
-    container_name: pgadmin
+      - net-app
     depends_on:
       - postgres
-    restart: always
+    volumes:
+      - ./Back:/usr/src/app
+      - /usr/src/app/node_modules
+    restart: unless-stopped
 
-  # backend:
-  #   container_name: nestjs-app
-  #   image: nestjs-app
-  #   build:
-  #     context: ./Back
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 3000:3000
-  #   networks:
-  #     - net-db
-  #     - net-app
-  #   depends_on:
-  #     - postgres
-  #   volumes:
-  #     - ./Back:/usr/src/app
-  #     - /usr/src/app/node_modules
-  #   restart: unless-stopped
 
   frontend:
     container_name: frontend
@@ -65,5 +58,8 @@ services:
     restart: unless-stopped
     environment:
       - CHOKIDAR_USEPOLLING=true
-    # depends_on:
-    #   - backend
+    depends_on:
+       - backend
+
+volumes:
+    db-data:
