--- a/Back/package.json
+++ b/Back/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@prisma/client": "^4.12.0",
     "axios": "^1.3.4",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -48,6 +49,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/jest": "29.2.4",
