--- a/Back/src/package.json
+++ b/Back/src/package.json
@@ -24,6 +24,7 @@
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
