--- a/Front/package.json
+++ b/Front/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "animate.css": "^4.1.1",
+    "axios": "^1.4.0",
     "create-react-app": "^1.2.1",
     "framer-motion": "^10.12.4",
     "p5": "^1.6.0",
