--- a/Front/package.json
+++ b/Front/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.35",
     "react-router-dom": "^6.10.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "^5.0.1",
+    "typekit": "^0.1.1",
     "typescript": "^5.0.4",
     "use-sound": "^4.0.1",
     "web-vitals": "^3.3.1"
