--- a/Front/package.json
+++ b/Front/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.35",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "typescript": "^5.0.4",
