start chat with websocket

--- a/Front/package.json
+++ b/Front/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^16.8.0 || ^17.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.1",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^18.16.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
@@ -24,6 +29,7 @@
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.6.1",
     "typekit": "^0.1.1",
     "typescript": "^5.0.4",
     "use-sound": "^4.0.1",
