--- a/Back/src/package.json
+++ b/Back/src/package.json
@@ -20,6 +20,8 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-socket.io": "^9.4.2",
+    "@nestjs/websockets": "^9.4.2",
     "@prisma/client": "^4.13.0",
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.6",
