--- a/Back/package.json
+++ b/Back/package.json
@@ -28,10 +28,14 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.2",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.4.3",
     "@prisma/client": "^4.13.0",
+    "@types/multer": "^1.4.7",
     "axios": "^1.3.4",
+    "buffer-to-stream": "^1.0.0",
+    "cloudinary": "^1.38.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
