--- a/Back/src/package.json
+++ b/Back/src/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "qrcode": "^1.5.3",
+    "serve-static": "^1.15.0",
     "speakeasy": "^2.0.0"
   }
 }
