--- a/Front/package.json
+++ b/Front/package.json
@@ -13,11 +13,11 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.1",
     "@types/material-ui": "^0.21.12",
-    "@types/node": "^18.16.1",
     "@types/react-dom": "^18.2.1",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "create-react-app": "^1.2.1",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.12.4",
     "p5": "^1.6.0",
     "react": "^18.2.0",
@@ -62,6 +62,7 @@
     "@types/react-dom": "17.0.14"
   },
   "devDependencies": {
+    "@types/node": "^20.4.4",
     "@types/react": "^18.2.14",
     "@types/react-router-dom": "^5.3.3"
   }
