--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@types/express-session": "^1.17.7",
+    "@types/node": "^20.4.4",
     "@types/passport-local": "^1.0.35",
     "typescript": "^5.0.3"
   }
