--- a/Front/package.json
+++ b/Front/package.json
@@ -19,6 +19,7 @@
     "create-react-app": "^1.2.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.12.4",
+    "js-cookie": "^3.0.5",
     "p5": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
