--- a/Back/package.json
+++ b/Back/package.json
@@ -27,7 +27,9 @@
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.2",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.4.3",
     "@prisma/client": "^4.13.0",
     "axios": "^1.3.4",
     "cookie-parser": "^1.4.6",
