--- a/Front/package.json
+++ b/Front/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -10,20 +12,23 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.1",
-    "@types/node": "^18.16.1",
-    "@types/react": "^18.2.0",
+    "@types/material-ui": "^0.21.12",
     "@types/react-dom": "^18.2.1",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "create-react-app": "^1.2.1",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.12.4",
+    "js-cookie": "^3.0.5",
     "p5": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.35",
     "react-qr-code": "^2.0.11",
-    "react-router-dom": "^6.11.1",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "redirect": "^0.2.0",
+    "socket.io-client": "^4.6.1",
     "typekit": "^0.1.1",
     "typescript": "^5.0.4",
     "use-sound": "^4.0.1",
@@ -56,5 +61,10 @@
   "resolutions": {
     "@types/react": "17.0.14",
     "@types/react-dom": "17.0.14"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.8",
+    "@types/react": "^18.2.14",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
