--- a/Back/package.json
+++ b/Back/package.json
@@ -41,6 +41,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "install": "^0.13.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.3",
     "npm": "^9.6.3",
     "otplib": "^12.0.1",
