--- a/Front/package.json
+++ b/Front/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -19,9 +20,9 @@
     "create-react-app": "^1.2.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.12.4",
-    "js-cookie": "^3.0.5",
     "gsap": "^3.12.2",
     "jquery": "^3.7.0",
+    "js-cookie": "^3.0.5",
     "p5": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
