--- a/Back/src/package.json
+++ b/Back/src/package.json
@@ -26,6 +26,7 @@
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
