--- a/Back/package.json
+++ b/Back/package.json
@@ -37,6 +37,7 @@
     "buffer-to-stream": "^1.0.0",
     "cloudinary": "^1.38.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -75,7 +76,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^4.13.0",
+    "prisma": "^4.16.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
