--- a/Front/package.json
+++ b/Front/package.json
@@ -3,42 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/lab": "^5.0.0-alpha.145",
+    "@mui/material": "^5.14.10",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.1",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.5",
     "@types/material-ui": "^0.21.12",
-    "@types/react-dom": "^18.2.1",
+    "@types/react-dom": "^18.2.7",
     "animate.css": "^4.1.1",
-    "axios": "^1.4.0",
-    "create-react-app": "^1.2.1",
+    "axios": "^1.5.0",
+    "create-react-app": "^5.0.1",
     "dotenv": "^16.3.1",
-    "framer-motion": "^10.12.4",
+    "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
-    "jquery": "^3.7.0",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
-    "p5": "^1.6.0",
+    "p5": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.35",
-    "react-qr-code": "^2.0.11",
-    "react-router-dom": "^6.14.1",
+    "react-qr-code": "^2.0.12",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "redirect": "^0.2.0",
     "sass": "^1.67.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "socket.io-client": "^4.6.1",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
     "typekit": "^0.1.1",
-    "typescript": "^5.0.4",
+    "typescript": "^5.2.2",
     "use-sound": "^4.0.1",
-    "web-vitals": "^3.3.1"
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -69,8 +72,8 @@
     "@types/react-dom": "17.0.14"
   },
   "devDependencies": {
-    "@types/node": "^20.4.8",
-    "@types/react": "^18.2.14",
+    "@types/node": "^20.6.2",
+    "@types/react": "^18.2.22",
     "@types/react-router-dom": "^5.3.3"
   }
 }
