--- a/Back/package.json
+++ b/Back/package.json
@@ -33,6 +33,7 @@
     "@nestjs/websockets": "^9.4.3",
     "@prisma/client": "^4.13.0",
     "@types/multer": "^1.4.7",
+    "argon2": "^0.31.1",
     "axios": "^1.3.4",
     "buffer-to-stream": "^1.0.0",
     "cloudinary": "^1.38.0",
