blocked messages in channels

--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -1,11 +1,12 @@
 # build step
-FROM node:16.13.2-alpine as build
+FROM node:18-alpine as build
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install 
+RUN npm install -g npm@10.1.0 \
+	&& npm install --legacy-peer-deps
 
 # CMD ["npm", "start"]
 ENTRYPOINT ["tail", "-f", "/dev/null"]
