docker prod ongoing + getUserByName modif

--- a/Back/Dockerfile
+++ b/Back/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine
+FROM node:18-alpine as development
 
 WORKDIR /usr/src/app
 
@@ -20,6 +20,27 @@ COPY ./utils/script.sh /
 
 RUN chmod 755 /script.sh
 
-ENTRYPOINT [ "tail", "-f", "/dev/null" ]
+# ENTRYPOINT [ "tail", "-f", "/dev/null" ]
 
-# CMD [ "/script.sh" ]
+CMD [ "/script.sh" ]
+
+FROM node:18-alpine as production
+
+WORKDIR /usr/src/app
+
+COPY ./package*.json ./
+
+RUN npm install prisma --save-dev\
+	&& npm i -g @nestjs/cli \
+	&& npm install -g npm@10.1.0 \
+	&& npm install --legacy-peer-deps
+
+COPY ./src .
+
+EXPOSE 3001
+
+COPY ./utils/script.sh /
+
+RUN chmod 755 /script.sh
+
+CMD [ "/script.sh" ]
