--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -1,5 +1,5 @@
 # build step
-FROM node:18-alpine as build
+FROM node:18-alpine as development
 
 WORKDIR /usr/src/app
 
@@ -8,5 +8,17 @@ COPY package*.json ./
 RUN npm install -g npm@10.1.0 \
 	&& npm install --legacy-peer-deps
 
-# CMD ["npm", "start"]
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+CMD ["npm", "start"]
+
+FROM node:18-alpine as production
+
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+
+RUN npm install -g npm@10.1.0 \
+	&& npm install --omit=dev --legacy-peer-deps
+
+COPY . .
+
+CMD ["npm", "start"]
