--- a/Back/Dockerfile
+++ b/Back/Dockerfile
@@ -42,5 +42,5 @@ COPY ./utils/script.sh /
 
 RUN chmod 755 /script.sh
 
-ENTRYPOINT [ "/script.sh" ]
+ENTRYPOINT [ "sh", "/script.sh" ]
 # ENTRYPOINT [ "tail", "-f", "/dev/null" ]
