--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -14,6 +14,8 @@ FROM node:18-alpine as production
 
 WORKDIR /usr/src/app
 
+RUN npm install -g serve
+
 COPY package*.json ./
 
 RUN npm install -g npm@10.1.0 \
@@ -21,4 +23,6 @@ RUN npm install -g npm@10.1.0 \
 
 COPY . .
 
-CMD ["npm", "start"]
+# RUN npm run build
+ENTRYPOINT [ "npm", "start" ]
+# ENTRYPOINT ["serve", "-s", "build"]
