--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -1,12 +1,15 @@
-# build step
-FROM node:18-alpine as build
+FROM node:18-alpine as production
 
 WORKDIR /usr/src/app
+
+RUN npm install -g serve
 
 COPY package*.json ./
 
 RUN npm install -g npm@10.1.0 \
-	&& npm install --legacy-peer-deps
+    && npm install --omit=dev --legacy-peer-deps
 
-# CMD ["npm", "start"]
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+COPY . .
+
+# RUN npm run build
+ENTRYPOINT [ "npm", "start" ]
